--- a/wine.ipynb
+++ b/wine.ipynb
@@ -1,1 +1,73 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c57cd3b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, GridSearchCV\n",
+    "from sklearn.metrics import roc_auc_score, make_scorer\n",
+    "from lightgbm import LGBMClassifier\n",
+    "\n",
+    "# 固定随机种子\n",
+    "SEED = 42\n",
+    "\n",
+    "# Step 1: 手动拆分训练集和测试集\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.33, stratify=y, random_state=SEED\n",
+    ")\n",
+    "\n",
+    "# Step 2: 设置 LightGBM 基础模型\n",
+    "lgb_base = LGBMClassifier(\n",
+    "    class_weight='balanced',\n",
+    "    random_state=SEED,\n",
+    "    n_jobs=-1  # 多线程加速\n",
+    ")\n",
+    "\n",
+    "# Step 3: 设置超参数网格（你可以进一步微调）\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200],\n",
+    "    'max_depth': [3, 5, 7],\n",
+    "    'learning_rate': [0.01, 0.05, 0.1],\n",
+    "    'subsample': [0.8, 1.0],\n",
+    "    'colsample_bytree': [0.8, 1.0]\n",
+    "}\n",
+    "\n",
+    "# Step 4: 设置交叉验证器和 AUC 评分器\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=SEED)\n",
+    "scorer = make_scorer(roc_auc_score, needs_proba=True)\n",
+    "\n",
+    "# Step 5: 网格搜索\n",
+    "grid_search = GridSearchCV(\n",
+    "    lgb_base,\n",
+    "    param_grid,\n",
+    "    scoring=scorer,\n",
+    "    cv=cv,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Step 6: 最佳模型评估\n",
+    "best_model = grid_search.best_estimator_\n",
+    "y_prob_test = best_model.predict_proba(X_test)[:, 1]\n",
+    "auc_test = roc_auc_score(y_test, y_prob_test)\n",
+    "\n",
+    "print(\"✅ Best params:\", grid_search.best_params_)\n",
+    "print(f\"✅ Test AUC with best LightGBM model: {auc_test:.4f}\")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
