--- a/wine.ipynb
+++ b/wine.ipynb
@@ -61,6 +61,101 @@
     "print(\"✅ Best params:\", grid_search.best_params_)\n",
     "print(f\"✅ Test AUC with best LightGBM model: {auc_test:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df58fa09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "from scipy.optimize import curve_fit\n",
+    "from sklearn.metrics import r2_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 定义 sigmoid 函数\n",
+    "def sigmoid(t, L, k, t0):\n",
+    "    return L / (1 + np.exp(-k * (t - t0)))\n",
+    "\n",
+    "# 适用于汇总所有散点的 sigmoid 拟合 + plotly 画图\n",
+    "def fit_and_plot_sigmoid_plotly(df_volume):\n",
+    "    df = df_volume.copy()\n",
+    "    df = df.sort_values('rolling_week')\n",
+    "\n",
+    "    # Step 1: 给 rolling_week 编号（顺序时间轴）\n",
+    "    week_to_index = {week: i for i, week in enumerate(sorted(df['rolling_week'].unique()))}\n",
+    "    df['t'] = df['rolling_week'].map(week_to_index)\n",
+    "\n",
+    "    # Step 2: 拟合 sigmoid\n",
+    "    t_all = df['t'].values\n",
+    "    y_all = df['wineb_marketshare'].values\n",
+    "\n",
+    "    try:\n",
+    "        popt, _ = curve_fit(sigmoid, t_all, y_all, p0=[1, 1, np.median(t_all)], maxfev=10000)\n",
+    "        y_pred = sigmoid(t_all, *popt)\n",
+    "        r2 = r2_score(y_all, y_pred)\n",
+    "        L, k, t0 = popt\n",
+    "        tipping_index = int(round(t0))\n",
+    "        \n",
+    "        # 反查 tipping 对应的 rolling_week\n",
+    "        index_to_week = {v: k for k, v in week_to_index.items()}\n",
+    "        tipping_week = index_to_week.get(tipping_index, \"N/A\")\n",
+    "\n",
+    "        df['predicted'] = y_pred\n",
+    "\n",
+    "        # Step 3: 绘图\n",
+    "        fig = go.Figure()\n",
+    "\n",
+    "        # 实际散点\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=df['t'],\n",
+    "            y=df['wineb_marketshare'],\n",
+    "            mode='markers',\n",
+    "            name='Observed Market Share',\n",
+    "            marker=dict(size=5, opacity=0.4)\n",
+    "        ))\n",
+    "\n",
+    "        # 拟合曲线\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=df['t'],\n",
+    "            y=df['predicted'],\n",
+    "            mode='lines',\n",
+    "            name='Sigmoid Fit',\n",
+    "            line=dict(width=2)\n",
+    "        ))\n",
+    "\n",
+    "        # 拐点垂线\n",
+    "        fig.add_vline(\n",
+    "            x=t0,\n",
+    "            line=dict(dash='dash', color='red'),\n",
+    "            annotation_text=f\"Tipping Point (t0 ≈ {t0:.1f})\\nWeek: {tipping_week}\",\n",
+    "            annotation_position=\"top right\"\n",
+    "        )\n",
+    "\n",
+    "        fig.update_layout(\n",
+    "            title=\"Sigmoid Fit to All Market Share Points\",\n",
+    "            xaxis_title=\"Time Index (t)\",\n",
+    "            yaxis_title=\"Market Share\",\n",
+    "            height=500,\n",
+    "            width=900\n",
+    "        )\n",
+    "\n",
+    "        fig.show()\n",
+    "\n",
+    "        return {\n",
+    "            'L': L,\n",
+    "            'k': k,\n",
+    "            't0': t0,\n",
+    "            'r2': r2,\n",
+    "            'tipping_week': tipping_week\n",
+    "        }\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ 拟合失败: {e}\")\n",
+    "        return None\n"
+   ]
   }
  ],
  "metadata": {
