--- a/wine.ipynb
+++ b/wine.ipynb
@@ -133,6 +133,50 @@
     "        print(f\"❌ 拟合失败: {e}\")\n",
     "        return None\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ec464b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_sigmoid_to_all_points(df_volume):\n",
+    "    df = df_volume.copy()\n",
+    "    df = df.sort_values(['rolling_week'])\n",
+    "\n",
+    "    # Step 1: 构造 X（时间点索引）和 y（market share）\n",
+    "    # 将 rolling_week 映射为顺序 t 值（0, 1, 2, ..., N）\n",
+    "    week_to_index = {week: i for i, week in enumerate(sorted(df['rolling_week'].unique()))}\n",
+    "    df['t'] = df['rolling_week'].map(week_to_index)\n",
+    "\n",
+    "    # Step 2: 拟合 sigmoid\n",
+    "    t_all = df['t'].values\n",
+    "    y_all = df['wineb_marketshare'].values\n",
+    "\n",
+    "    try:\n",
+    "        popt, _ = curve_fit(sigmoid, t_all, y_all, p0=[1, 1, np.median(t_all)], maxfev=10000)\n",
+    "        y_pred = sigmoid(t_all, *popt)\n",
+    "        r2 = r2_score(y_all, y_pred)\n",
+    "        L, k, t0 = popt\n",
+    "\n",
+    "        # 转换拟合出的 t0 为 rolling_week\n",
+    "        inv_week_map = {v: k for k, v in week_to_index.items()}\n",
+    "        tipping_week = inv_week_map.get(int(round(t0)), None)\n",
+    "\n",
+    "        return {\n",
+    "            'L': L,\n",
+    "            'k': k,\n",
+    "            't0': t0,\n",
+    "            'tipping_week': tipping_week,\n",
+    "            'r2': r2,\n",
+    "            'df_all': df.assign(predicted_ms=y_pred)\n",
+    "        }\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ 拟合失败: {e}\")\n",
+    "        return None\n"
+   ]
   }
  ],
  "metadata": {
