--- a/wine.ipynb
+++ b/wine.ipynb
@@ -177,6 +177,152 @@
     "        print(f\"❌ 拟合失败: {e}\")\n",
     "        return None\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb71f96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "\n",
+    "def plot_account_sigmoid(df_volume, account_id, L, k, t0):\n",
+    "    # 1. 取该账户的数据\n",
+    "    df_acct = df_volume[df_volume['account_id'] == account_id].sort_values('rolling_week').reset_index(drop=True)\n",
+    "    t = np.arange(len(df_acct))\n",
+    "    y = df_acct['wineb_marketshare'].values\n",
+    "\n",
+    "    # 2. 生成拟合曲线\n",
+    "    def sigmoid(t, L, k, t0):\n",
+    "        return L / (1 + np.exp(-k * (t - t0)))\n",
+    "\n",
+    "    y_pred = sigmoid(t, L, k, t0)\n",
+    "\n",
+    "    # 3. 创建 Plotly 图\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # 实际散点\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=t,\n",
+    "        y=y,\n",
+    "        mode='markers',\n",
+    "        name='Observed MS',\n",
+    "        marker=dict(size=6, opacity=0.6)\n",
+    "    ))\n",
+    "\n",
+    "    # 拟合曲线\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=t,\n",
+    "        y=y_pred,\n",
+    "        mode='lines',\n",
+    "        name='Sigmoid Fit',\n",
+    "        line=dict(width=2, color='red')\n",
+    "    ))\n",
+    "\n",
+    "    # 标注拟合参数\n",
+    "    fig.add_annotation(\n",
+    "        x=max(t) * 0.7,\n",
+    "        y=max(y) * 0.9,\n",
+    "        text=f\"<b>L</b>: {L:.2f}<br><b>k</b>: {k:.2f}<br><b>t0</b>: {t0:.2f}\",\n",
+    "        showarrow=False,\n",
+    "        bgcolor=\"white\",\n",
+    "        bordercolor=\"black\",\n",
+    "        borderwidth=1\n",
+    "    )\n",
+    "\n",
+    "    # 可选：画出拐点位置\n",
+    "    fig.add_vline(\n",
+    "        x=t0,\n",
+    "        line=dict(dash='dot', color='gray'),\n",
+    "        annotation_text=f\"t0 ≈ {t0:.1f}\",\n",
+    "        annotation_position=\"top left\"\n",
+    "    )\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        title=f\"Sigmoid Fit for Account {account_id}\",\n",
+    "        xaxis_title=\"Rolling Order Index (t)\",\n",
+    "        yaxis_title=\"Market Share\",\n",
+    "        height=500,\n",
+    "        width=900\n",
+    "    )\n",
+    "\n",
+    "    fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1d9350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "\n",
+    "def plot_account_sigmoid(df_volume, account_id, L, k, t0):\n",
+    "    # 1. 取该账户的数据\n",
+    "    df_acct = df_volume[df_volume['account_id'] == account_id].sort_values('rolling_week').reset_index(drop=True)\n",
+    "    t = np.arange(len(df_acct))\n",
+    "    y = df_acct['wineb_marketshare'].values\n",
+    "\n",
+    "    # 2. 生成拟合曲线\n",
+    "    def sigmoid(t, L, k, t0):\n",
+    "        return L / (1 + np.exp(-k * (t - t0)))\n",
+    "\n",
+    "    y_pred = sigmoid(t, L, k, t0)\n",
+    "\n",
+    "    # 3. 创建 Plotly 图\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # 实际散点\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=t,\n",
+    "        y=y,\n",
+    "        mode='markers',\n",
+    "        name='Observed MS',\n",
+    "        marker=dict(size=6, opacity=0.6)\n",
+    "    ))\n",
+    "\n",
+    "    # 拟合曲线\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=t,\n",
+    "        y=y_pred,\n",
+    "        mode='lines',\n",
+    "        name='Sigmoid Fit',\n",
+    "        line=dict(width=2, color='red')\n",
+    "    ))\n",
+    "\n",
+    "    # 标注拟合参数\n",
+    "    fig.add_annotation(\n",
+    "        x=max(t) * 0.7,\n",
+    "        y=max(y) * 0.9,\n",
+    "        text=f\"<b>L</b>: {L:.2f}<br><b>k</b>: {k:.2f}<br><b>t0</b>: {t0:.2f}\",\n",
+    "        showarrow=False,\n",
+    "        bgcolor=\"white\",\n",
+    "        bordercolor=\"black\",\n",
+    "        borderwidth=1\n",
+    "    )\n",
+    "\n",
+    "    # 可选：画出拐点位置\n",
+    "    fig.add_vline(\n",
+    "        x=t0,\n",
+    "        line=dict(dash='dot', color='gray'),\n",
+    "        annotation_text=f\"t0 ≈ {t0:.1f}\",\n",
+    "        annotation_position=\"top left\"\n",
+    "    )\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        title=f\"Sigmoid Fit for Account {account_id}\",\n",
+    "        xaxis_title=\"Rolling Order Index (t)\",\n",
+    "        yaxis_title=\"Market Share\",\n",
+    "        height=500,\n",
+    "        width=900\n",
+    "    )\n",
+    "\n",
+    "    fig.show()\n"
+   ]
   }
  ],
  "metadata": {
