--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -193,14 +193,35 @@
     "        df.groupby([id_col, name_col, week_col], as_index=False)[[a_col, b_col, c_col]].sum()\n",
     "    )\n",
     "\n",
+    "    # def _reindex_one(g: pd.DataFrame) -> pd.DataFrame:\n",
+    "    #     idx = pd.date_range(start=earliest_needed, end=end_wk, freq=\"W-FRI\")\n",
+    "    #     g = g.set_index(week_col).reindex(idx, fill_value=0)\n",
+    "    #     g.index.name = week_col\n",
+    "    #     g = g.reset_index()\n",
+    "    #     g[id_col] = g[id_col].iloc[0]\n",
+    "    #     g[name_col] = g[name_col].iloc[0]\n",
+    "    #     return g[[id_col, name_col, week_col, a_col, b_col, c_col]]\n",
     "    def _reindex_one(g: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # 先从真实行取出 id/name 常量，避免被补齐行的 0 覆盖\n",
+    "        _id   = g[id_col].iloc[0]\n",
+    "        _name = g[name_col].iloc[0]\n",
+    "\n",
     "        idx = pd.date_range(start=earliest_needed, end=end_wk, freq=\"W-FRI\")\n",
-    "        g = g.set_index(week_col).reindex(idx, fill_value=0)\n",
-    "        g.index.name = week_col\n",
-    "        g = g.reset_index()\n",
-    "        g[id_col] = g[id_col].iloc[0]\n",
-    "        g[name_col] = g[name_col].iloc[0]\n",
-    "        return g[[id_col, name_col, week_col, a_col, b_col, c_col]]\n",
+    "\n",
+    "    # 只对数值列做补齐；不要对 id/name 做 fill_value=0\n",
+    "        g_vals = (\n",
+    "            g[[week_col, a_col, b_col, c_col]]\n",
+    "            .set_index(week_col)\n",
+    "            .reindex(idx, fill_value=0)\n",
+    "            .reset_index()\n",
+    "            .rename(columns={\"index\": week_col})\n",
+    "    )\n",
+    "\n",
+    "    # 回写 id/name 常量\n",
+    "        g_vals[id_col] = _id\n",
+    "        g_vals[name_col] = _name\n",
+    "\n",
+    "        return g_vals[[id_col, name_col, week_col, a_col, b_col, c_col]]\n",
     "\n",
     "    weekly_full = (\n",
     "        weekly.groupby([id_col, name_col], group_keys=False)\n",
