--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# original R4W tABLE\n",
+    "# original R4W TABLE\n",
     "def get_volume_r4w(df, start_wk, end_wk):\n",
     "    rolling_window_df = pd.DataFrame([\n",
     "    {\n",
@@ -303,6 +303,229 @@
     "        \"rolling_4w_a_ms\", \"rolling_4w_b_ms\",\n",
     "    ]\n",
     "    out = out.loc[:, keep_cols]\n",
+    "\n",
+    "    return out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d6579fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume_r4w = build_r4w_metrics(\n",
+    "    df_all,\n",
+    "    start_wk=\"2024-05-01\",   # 不必是周五；函数会自动对齐到该周“周五”\n",
+    "    end_wk=\"2025-08-29\",     # 这是周五，完美\n",
+    "    freq_denominator=\"fixed4\"  # ✅ 正确参数名\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d161551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Original Change Table Version\n",
+    "def get_change_r4w(volume_r4w):\n",
+    "    change_records = []\n",
+    "    volume_r4w['rolling_window_range'] = (\n",
+    "        volume_r4w['rolling_start'].dt.strftime('%Y-%m-%d') + \n",
+    "        ' to ' \n",
+    "        + volume_r4w['rolling_end'].dt.strftime('%Y-%m-%d')\n",
+    "    )\n",
+    "\n",
+    "    for acct, df_acct in volume_r4w.groupby('Account ID'):\n",
+    "        df_acct = df_acct.sort_values('rolling_order').reset_index(drop=True)\n",
+    "        for i in range(1, len(df_acct)):\n",
+    "            prev = df_acct.iloc[i-1]\n",
+    "            curr = df_acct.iloc[i]\n",
+    "\n",
+    "            def pct(now, prev): return round((now - prev)/prev, 2) if pd.notnull(prev) and prev != 0 else 0\n",
+    "\n",
+    "            change_records.append({\n",
+    "                'Account ID': acct,\n",
+    "                'rolling_order': curr['rolling_order'],\n",
+    "                'rolling_window_range_start': prev['rolling_window_range'],\n",
+    "                'rolling_window_range_end': curr['rolling_window_range'],\n",
+    "                'change_4w_a_stock': pct(curr['rolling_4w_a_stock'] - prev['rolling_4w_a_stock']),\n",
+    "                'change_4w_b_stock': pct(curr['rolling_4w_b_stock'] - prev['rolling_4w_b_stock']),\n",
+    "                'change_c_stock': pct(curr['c_stock'] - prev['c_stock']),\n",
+    "                'change_a_freq': pct(curr['a_freq'] - prev['a_freq']),\n",
+    "                'change_b_freq': pct(curr['b_freq'] - prev['b_freq']),\n",
+    "                'change_4w_a_ms': pct(curr['rolling_4w_a_ms'] - prev['rolling_4w_a_ms']),\n",
+    "                'change_4w_b_ms': pct(curr['rolling_4w_b_ms'] - prev['rolling_4w_b_ms']),\n",
+    "            })\n",
+    "    change_r4w = pd.DataFrame(change_records)\n",
+    "\n",
+    "    first_b_stocking_orders = (volume_r4w[(volume_r4w['rolling_4w_b_ms'] > 0)]\n",
+    "                               .groupby('Account ID')['rolling_order']\n",
+    "                               .min()\n",
+    "                               .reset_index()\n",
+    "                               .rename(columns={'rolling_order':'first_b_stock_rw'}))\n",
+    "    fallback_orders = (volume_r4w.groupby('Account ID')['rolling_order'].max().reset_index()\n",
+    "                          .rename(columns={'rolling_order':'fallback_order'}))\n",
+    "    first_b_stocking_orders = fallback_orders.merge(first_b_stocking_orders, on='Account ID', how='left')\n",
+    "    first_b_stocking_orders['first_b_stock_rw'] = first_b_stocking_orders['first_b_stock_rw'].fillna(first_b_stocking_orders['fallback_order'])\n",
+    "    change_r4w = change_r4w.merge(first_b_stocking_orders[['Account ID', 'first_b_stock_rw']],\n",
+    "                                  left_on='Account ID', right_on='Account ID', how='left')\n",
+    "    change_r4w = change_r4w.merge(df_all[['Account ID', 'account_name']].drop_duplicates(),\n",
+    "                                left_on='Account ID', right_on='Account ID', how='left')\n",
+    "    return change_r4w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50480832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def get_change_r4w_fast(\n",
+    "    volume_r4w: pd.DataFrame,\n",
+    "    *,\n",
+    "    id_col: str = \"account_id\",\n",
+    "    name_col: str = \"account_name\",\n",
+    "    order_col: str = \"rolling_order\",\n",
+    "    start_col: str = \"rolling_start\",\n",
+    "    end_col: str = \"rolling_end\",\n",
+    "    # R4W 指标列（与 build_r4w_metrics 输出保持一致）\n",
+    "    a4_col: str = \"rolling_4w_a_stock\",\n",
+    "    b4_col: str = \"rolling_4w_b_stock\",\n",
+    "    c4_col: str = \"rolling_4w_c_stock\",\n",
+    "    a_freq_col: str = \"a_freq\",\n",
+    "    b_freq_col: str = \"b_freq\",\n",
+    "    c_freq_col: str = \"c_freq\",\n",
+    "    a_ms_col: str = \"rolling_4w_a_ms\",\n",
+    "    b_ms_col: str = \"rolling_4w_b_ms\",\n",
+    "    # 是否保留绝对变化（delta）列\n",
+    "    keep_delta: bool = False,\n",
+    "    # 百分比保留小数位\n",
+    "    round_ndigits: int = 2,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    生成“相邻滚动窗变化表”（相同账号、相邻 rolling_order 的百分比变化）。\n",
+    "    Vectorized change table between consecutive rolling windows per account.\n",
+    "\n",
+    "    变化定义（默认）/ Default change definition:\n",
+    "        pct_change = (curr - prev) / prev\n",
+    "        若 prev==0 或 NaN 则记为 0（避免 inf/NaN）\n",
+    "\n",
+    "    输出列 / Output columns:\n",
+    "      - id/name/order\n",
+    "      - rolling_window_range_start: 上一个窗口的 [start, end] 字符串\n",
+    "      - rolling_window_range_end  : 当前窗口的   [start, end] 字符串\n",
+    "      - change_4w_a_stock / change_4w_b_stock / change_4w_c_stock\n",
+    "      - change_a_freq / change_b_freq / change_c_freq\n",
+    "      - change_4w_a_ms / change_4w_b_ms\n",
+    "      - （可选）*_delta 绝对变化列\n",
+    "      - first_b_stock_rw: 每账号首次出现 B 份额>0 的 rolling_order（缺失回退为该账号最大 rolling_order）\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df = volume_r4w.copy()\n",
+    "\n",
+    "    # ---------- 0) 安全排序 / sort to ensure consecutive windows ----------\n",
+    "    df = df.sort_values([id_col, order_col], kind=\"mergesort\").reset_index(drop=True)\n",
+    "\n",
+    "    # ---------- 1) 生成窗口范围字符串（上、下两个窗） ----------\n",
+    "    # Build readable ranges first\n",
+    "    rng_str = (\n",
+    "        df[start_col].dt.strftime(\"%Y-%m-%d\")\n",
+    "        + \" to \"\n",
+    "        + df[end_col].dt.strftime(\"%Y-%m-%d\")\n",
+    "    )\n",
+    "    df[\"__range_str\"] = rng_str\n",
+    "\n",
+    "    # 上一个窗口（同账号，order-1）的范围与指标 → 使用 groupby().shift(1)\n",
+    "    # Previous window (same account) via shift(1)\n",
+    "    gb = df.groupby(id_col, group_keys=False)\n",
+    "\n",
+    "    prev_range = gb[\"__range_str\"].shift(1)\n",
+    "    prev_order = gb[order_col].shift(1)\n",
+    "\n",
+    "    # 需要变化的字段列表（在这里统一维护，易扩展）\n",
+    "    metric_cols = [\n",
+    "        a4_col, b4_col, c4_col,\n",
+    "        a_freq_col, b_freq_col, c_freq_col,\n",
+    "        a_ms_col, b_ms_col,\n",
+    "    ]\n",
+    "\n",
+    "    # 为每个度量生成 prev、delta、pct_change\n",
+    "    for col in metric_cols:\n",
+    "        df[f\"__prev_{col}\"]  = gb[col].shift(1)\n",
+    "        df[f\"__delta_{col}\"] = df[col] - df[f\"__prev_{col}\"]\n",
+    "        # 百分比变化： (curr-prev)/prev，prev==0 or NaN → 0\n",
+    "        prev = df[f\"__prev_{col}\"].astype(\"float\")\n",
+    "        curr = df[col].astype(\"float\")\n",
+    "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
+    "            pct = np.where((prev != 0) & (~np.isnan(prev)),\n",
+    "                           (curr - prev) / prev,\n",
+    "                           0.0)\n",
+    "        df[f\"__pct_{col}\"] = np.round(pct, round_ndigits)\n",
+    "\n",
+    "    # 只保留具有“前一个窗口”的行（rolling_order >= 2）\n",
+    "    df_keep = df[prev_order.notna()].copy()\n",
+    "\n",
+    "    # ---------- 2) 组装输出 ----------\n",
+    "    out = pd.DataFrame({\n",
+    "        id_col:   df_keep[id_col].values,\n",
+    "        name_col: df_keep[name_col].values,\n",
+    "        order_col: df_keep[order_col].astype(\"Int32\").values,\n",
+    "        \"rolling_window_range_start\": prev_range.loc[df_keep.index].values,  # 上一窗口的范围\n",
+    "        \"rolling_window_range_end\":   df_keep[\"__range_str\"].values,         # 当前窗口的范围\n",
+    "    })\n",
+    "\n",
+    "    # 映射列名：原指标名 → 输出变化列名\n",
+    "    rename_map = {\n",
+    "        a4_col:      \"change_4w_a_stock\",\n",
+    "        b4_col:      \"change_4w_b_stock\",\n",
+    "        c4_col:      \"change_4w_c_stock\",\n",
+    "        a_freq_col:  \"change_a_freq\",\n",
+    "        b_freq_col:  \"change_b_freq\",\n",
+    "        c_freq_col:  \"change_c_freq\",\n",
+    "        a_ms_col:    \"change_4w_a_ms\",\n",
+    "        b_ms_col:    \"change_4w_b_ms\",\n",
+    "    }\n",
+    "\n",
+    "    # 添加百分比变化列\n",
+    "    for col in metric_cols:\n",
+    "        out[rename_map[col]] = df_keep[f\"__pct_{col}\"].values\n",
+    "\n",
+    "    # （可选）添加绝对变化列（便于做阈值/分段）\n",
+    "    if keep_delta:\n",
+    "        for col in metric_cols:\n",
+    "            out[rename_map[col].replace(\"change_\", \"delta_\")] = df_keep[f\"__delta_{col}\"].values\n",
+    "\n",
+    "    # ---------- 3) 计算 first_b_stock_rw（首次 B 份额>0 的 rolling_order） ----------\n",
+    "    # First rolling_order per account where b_ms_col > 0\n",
+    "    first_b = (\n",
+    "        volume_r4w.loc[volume_r4w[b_ms_col] > 0, [id_col, order_col]]\n",
+    "        .groupby(id_col, as_index=False)[order_col]\n",
+    "        .min()\n",
+    "        .rename(columns={order_col: \"first_b_stock_rw\"})\n",
+    "    )\n",
+    "\n",
+    "    # 如果某账号从未出现 B 份额>0，则回退为该账号最后一次 rolling_order\n",
+    "    fallback = (\n",
+    "        volume_r4w.groupby(id_col, as_index=False)[order_col]\n",
+    "        .max()\n",
+    "        .rename(columns={order_col: \"fallback_order\"})\n",
+    "    )\n",
+    "\n",
+    "    first_b = fallback.merge(first_b, on=id_col, how=\"left\")\n",
+    "    first_b[\"first_b_stock_rw\"] = first_b[\"first_b_stock_rw\"].fillna(first_b[\"fallback_order\"]).astype(\"Int32\")\n",
+    "\n",
+    "    out = out.merge(first_b[[id_col, \"first_b_stock_rw\"]], on=id_col, how=\"left\")\n",
+    "\n",
+    "    # ---------- 4) 清理临时列 ----------\n",
+    "    # （这里 out 已经是最终表，无需保留临时列）\n",
+    "    # 如果你希望保留更多上下文（如 curr/prev 原值），可以在 out 里额外 merge。\n",
     "\n",
     "    return out\n"
    ]
