--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -653,7 +653,7 @@
     "import numpy as np\n",
     "\n",
     "# =========================\n",
-    "# Scalling and Accelerated feature builder v2.1\n",
+    "# Scalling anbd Accelerated feature builder v2.1\n",
     "# =========================\n",
     "# Upgrads:\n",
     "# - Features reproduction：neg/pos/zero, volatility, first_drop/rise\n",
@@ -882,6 +882,218 @@
     "#\n",
     "# # 之后你就可以用 feat_train 做训练，feat_valid 做 out-of-fold 验证（再算 AUC/F1）。\n",
     "# # Then you can use feat_train for training, and feat_valid for out-of-fold validation (e.g. compute AUC/F1).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14b97010",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# =========================\n",
+    "# Fast feature builder v3.0\n",
+    "# =========================\n",
+    "def build_feature_matrix_fast(\n",
+    "    change_r4w: pd.DataFrame,\n",
+    "    volume_r4w: pd.DataFrame,\n",
+    "    cutoff: str | pd.Timestamp,\n",
+    "    *,\n",
+    "    # —— 主键与列名 / Keys & column names ——\n",
+    "    id_col=\"Account ID\",\n",
+    "    name_col_in_volume=\"account_name\",\n",
+    "    order_col=\"rolling_order\",\n",
+    "    firstb_col=\"first_b_stock_rw\",\n",
+    "    # —— A/B 侧变化列 / change columns ——\n",
+    "    a_change_cols=(\"change_4w_a_ms\", \"change_4w_a_stock\", \"change_a_freq\"),\n",
+    "    b_change_cols=(\"change_4w_b_ms\", \"change_4w_b_stock\", \"change_b_freq\"),\n",
+    "    # —— 窗口终点列（用于截止过滤）/ window-end column for cutoff ——\n",
+    "    end_range_col=\"rolling_window_range_end\",\n",
+    "    # —— before 段回看窗口长度 / lookback window length (before-B only) ——\n",
+    "    before_lookback_orders=52,\n",
+    "    # （可选）after 段限制长度；None=不限制\n",
+    "    post_weeks: int | None = None,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    构建特征矩阵（含 before_B & after_B），且：\n",
+    "      - 仅使用窗口终点 <= cutoff 的行\n",
+    "      - before 段只统计 “first_B 之前最近 `before_lookback_orders` 个窗口”\n",
+    "      - 输出中强制包含 account_name（来自 volume_r4w）\n",
+    "\n",
+    "    Build feature matrix with before/after-B splits, using windows with end <= cutoff.\n",
+    "    'before' phase only counts the last `before_lookback_orders` windows prior to first-B.\n",
+    "    Always returns `account_name` (merged from volume_r4w).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df = change_r4w.copy()\n",
+    "\n",
+    "    # ---------- 0) 截止日期过滤（从 range 字符串解析 end 日期） ----------\n",
+    "    # Parse window end date from e.g. \"2025-01-03 to 2025-01-31\" -> take the first date\n",
+    "    if end_range_col not in df.columns:\n",
+    "        raise ValueError(\n",
+    "            f\"Column '{end_range_col}' not found in change_r4w; \"\n",
+    "            f\"please provide a window-end column for cutoff filtering.\"\n",
+    "        )\n",
+    "    end_dates = pd.to_datetime(\n",
+    "        df[end_range_col].astype(str).str.split(\" to \").str[0],\n",
+    "        errors=\"coerce\"\n",
+    "    )\n",
+    "    cutoff = pd.to_datetime(cutoff)\n",
+    "    df = df.loc[end_dates.le(cutoff)].copy()\n",
+    "\n",
+    "    # ---------- 1) 基本列检查 / sanity checks ----------\n",
+    "    need_cols = [id_col, order_col, firstb_col, *a_change_cols, *b_change_cols]\n",
+    "    missing = [c for c in need_cols if c not in df.columns]\n",
+    "    if missing:\n",
+    "        raise ValueError(f\"Missing columns in change_r4w: {missing}\")\n",
+    "\n",
+    "    # ---------- 2) 相位标记（before / after） ----------\n",
+    "    df = df.sort_values([id_col, order_col]).copy()\n",
+    "    df[\"__before\"] = df[order_col] < df[firstb_col]\n",
+    "    df[\"__after\"]  = df[order_col] >= df[firstb_col]\n",
+    "\n",
+    "    # ---------- 3) 截断 before 段为“first_B 之前最近 52 个窗口” ----------\n",
+    "    # Limit 'before' phase to last `before_lookback_orders` windows prior to first-B\n",
+    "    bounds = (\n",
+    "        df[[id_col, firstb_col]]\n",
+    "        .drop_duplicates(subset=[id_col])\n",
+    "        .assign(__lb=lambda x: (x[firstb_col] - before_lookback_orders).clip(lower=1))\n",
+    "        .rename(columns={firstb_col: \"__fb\"})\n",
+    "    )\n",
+    "    df = df.merge(bounds[[id_col, \"__lb\", \"__fb\"]], on=id_col, how=\"left\")\n",
+    "    mask_before_window = (df[order_col] >= df[\"__lb\"]) & (df[order_col] < df[\"__fb\"])\n",
+    "    df[\"__before\"] = df[\"__before\"] & mask_before_window\n",
+    "\n",
+    "    # （可选）after 段限制长度（例如仅保留首购后 52 周）\n",
+    "    if post_weeks is not None:\n",
+    "        df[\"__after\"] = df[\"__after\"] & (df[order_col] < (df[\"__fb\"] + post_weeks))\n",
+    "\n",
+    "    # ---------- 4) A 面：before/after 的 neg/pos/zero + volatility ----------\n",
+    "    out_parts = []\n",
+    "    g = df.groupby(id_col, group_keys=True)\n",
+    "\n",
+    "    def _phase_counts_and_vol(col: str, phase_col: str, phase_name: str) -> pd.DataFrame:\n",
+    "        # 用掩码保留该相位的数据，其余置 NaN；groupby.std 会自动忽略 NaN\n",
+    "        vals = df[col].to_numpy()\n",
+    "        m = df[phase_col].to_numpy()\n",
+    "        phase_vals = np.where(m, vals, np.nan)\n",
+    "\n",
+    "        tmp = df[[id_col]].copy()\n",
+    "        tmp[f\"__{col}_phase\"] = phase_vals\n",
+    "\n",
+    "        neg_ct = g.apply(lambda x: ((x[col] < 0) & x[phase_col]).sum()).rename(f\"{col}_neg_{phase_name}\")\n",
+    "        pos_ct = g.apply(lambda x: ((x[col] > 0) & x[phase_col]).sum()).rename(f\"{col}_pos_{phase_name}\")\n",
+    "        zer_ct = g.apply(lambda x: ((x[col] == 0) & x[phase_col]).sum()).rename(f\"{col}_no_change_{phase_name}\")\n",
+    "        vol    = tmp.groupby(id_col, as_index=True)[f\"__{col}_phase\"].std(ddof=1).rename(f\"{col}_volatility_{phase_name}\")\n",
+    "\n",
+    "        return pd.concat([neg_ct, pos_ct, zer_ct, vol], axis=1)\n",
+    "\n",
+    "    for col in a_change_cols:\n",
+    "        out_parts.append(_phase_counts_and_vol(col, \"__before\", \"before\"))\n",
+    "        out_parts.append(_phase_counts_and_vol(col, \"__after\",  \"after\"))\n",
+    "\n",
+    "    df_change_features = pd.concat(out_parts, axis=1)\n",
+    "    df_change_features.index.name = id_col\n",
+    "    df_change_features = df_change_features.reset_index()\n",
+    "\n",
+    "    # ---------- 5) first_drop / first_rise（基于“<=cutoff”的全部窗口） ----------\n",
+    "    fr_parts = []\n",
+    "    for col in (*a_change_cols, *b_change_cols):\n",
+    "        mask_drop = df[col] < 0\n",
+    "        mask_rise = df[col] > 0\n",
+    "        first_drop = df.loc[mask_drop].groupby(id_col)[order_col].min().rename(f\"{col}_first_drop_order\")\n",
+    "        first_rise = df.loc[mask_rise].groupby(id_col)[order_col].min().rename(f\"{col}_first_rise_order\")\n",
+    "        fr_parts.append(first_drop)\n",
+    "        fr_parts.append(first_rise)\n",
+    "    df_firsts = pd.concat(fr_parts, axis=1).reset_index()\n",
+    "\n",
+    "    # ---------- 6) B 面汇总（不分相位）：pos_count & volatility ----------\n",
+    "    b_parts = []\n",
+    "    for col in b_change_cols:\n",
+    "        pos_count = df.groupby(id_col)[col].apply(lambda s: (s > 0).sum()).rename(f\"{col}_pos_count\")\n",
+    "        vol = df.groupby(id_col)[col].std(ddof=1).rename(f\"{col}_volatility\")\n",
+    "        b_parts.append(pos_count)\n",
+    "        b_parts.append(vol)\n",
+    "    df_b_summary = pd.concat(b_parts, axis=1).reset_index()\n",
+    "\n",
+    "    # ---------- 7) 连续串（before: a_stock；after: a_ms） ----------\n",
+    "    def _count_consecutive_neg(x: pd.Series, k: int) -> int:\n",
+    "        arr = x.to_numpy()\n",
+    "        n, streak = 0, 0\n",
+    "        for v in arr:\n",
+    "            if pd.notna(v) and (v < 0):\n",
+    "                streak += 1\n",
+    "                if streak == k:\n",
+    "                    n += 1\n",
+    "                    streak -= 1  # 允许重叠 / allow overlapping\n",
+    "            else:\n",
+    "                streak = 0\n",
+    "        return n\n",
+    "\n",
+    "    def _streak_block(group: pd.DataFrame) -> pd.Series:\n",
+    "        out = {}\n",
+    "        g_before = group.loc[group[\"__before\"]]\n",
+    "        g_after  = group.loc[group[\"__after\"]]\n",
+    "        for K in (3, 4, 5):\n",
+    "            out[f\"a_stocking_{K}fall_before_b\"] = _count_consecutive_neg(g_before[\"change_4w_a_stock\"], K)\n",
+    "        for K in (3, 4, 5):\n",
+    "            out[f\"a_ms_{K}fall_after_b\"] = _count_consecutive_neg(g_after[\"change_4w_a_ms\"], K)\n",
+    "        return pd.Series(out)\n",
+    "\n",
+    "    df_streaks = df.groupby(id_col, as_index=False).apply(_streak_block).reset_index(drop=True)\n",
+    "\n",
+    "    # ---------- 8) 合并所有特征 ----------\n",
+    "    features = (\n",
+    "        df_change_features\n",
+    "        .merge(df_firsts,    on=id_col, how=\"left\")\n",
+    "        .merge(df_b_summary, on=id_col, how=\"left\")\n",
+    "        .merge(df_streaks,   on=id_col, how=\"left\")\n",
+    "    )\n",
+    "\n",
+    "    # ---------- 9) 追加账户名，并将其置于第2列 ----------\n",
+    "    # Merge `account_name` from volume_r4w and move it right after id_col\n",
+    "    if name_col_in_volume in volume_r4w.columns:\n",
+    "        # 尝试识别 volume_r4w 的 ID 列名\n",
+    "        id_candidates = [c for c in volume_r4w.columns if c.lower() in (\"account id\", \"account_id\", \"id\")]\n",
+    "        if id_candidates:\n",
+    "            id_in_volume = id_candidates[0]\n",
+    "            names = volume_r4w[[id_in_volume, name_col_in_volume]].drop_duplicates()\n",
+    "            names = names.rename(columns={id_in_volume: id_col})\n",
+    "            features = features.merge(names, on=id_col, how=\"left\")\n",
+    "\n",
+    "    # 将列顺序调整为：id, account_name, 其它特征\n",
+    "    cols = features.columns.tolist()\n",
+    "    front = [id_col]\n",
+    "    if name_col_in_volume in cols:\n",
+    "        front.append(name_col_in_volume)\n",
+    "    rest = [c for c in cols if c not in front]\n",
+    "    features = features[front + rest]\n",
+    "\n",
+    "    return features\n",
+    "\n",
+    "\n",
+    "# =============================\n",
+    "# 便捷函数：一键生成 Train/Valid\n",
+    "# =============================\n",
+    "def build_train_valid_features(\n",
+    "    change_r4w: pd.DataFrame,\n",
+    "    volume_r4w: pd.DataFrame,\n",
+    "    *,\n",
+    "    cutoff_train=\"2025-08-29\",\n",
+    "    cutoff_valid=\"2025-10-03\",\n",
+    "    **kwargs\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    生成两套特征矩阵：\n",
+    "      - Train: 仅使用 <= cutoff_train 的窗口\n",
+    "      - Valid: 仅使用 <= cutoff_valid 的窗口（更靠近当前，天然 out-of-fold）\n",
+    "    \"\"\"\n",
+    "    feat_train = build_feature_matrix_fast(change_r4w, volume_r4w, cutoff_train, **kwargs)\n",
+    "    feat_valid = build_feature_matrix_fast(change_r4w, volume_r4w, cutoff_valid, **kwargs)\n",
+    "    return feat_train, feat_valid\n"
    ]
   }
  ],
